--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: ringtone_plugin
-description: A plugin to play ringtone on each device
+name: ringtone_manager
+description: A new Flutter plugin.
 version: 0.0.1
 author: Siddharth Jain <siddharth11241@gmail.com>
 homepage: https://github.com/Siddharth-Dev/ringtone_manager
@@ -25,8 +25,8 @@ flutter:
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
-    androidPackage: com.sj.ringtone_plugin
-    pluginClass: RingtonePlugin
+    androidPackage: com.sj.ringtone_manager
+    pluginClass: RingtoneManagerPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
